fix grid cell sizing on small screens

--- a/src/styles/_objects.grid.scss
+++ b/src/styles/_objects.grid.scss
@@ -17,7 +17,7 @@ $cell-padding: .5 * $gutter;
 }
 
 .o-cell {
-	width: calc(33.33333% - #{$gutter});
+	width: calc(310px - #{$gutter});
 	margin: 0 $cell-padding $cell-padding;
 	flex: 1 1 auto;
 }
